# logical-geometry

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  conanfile.txt
cpp/: CMakeLists.txt  ESSGeometryTest.cpp
cpp/cmake/: CompilerConfig.cmake
cpp/tests/: CMakeLists.txt  ESSGeometryTest.cpp
source/: ESSGeometry.h
tests/: CMakeLists.txt  ESSGeometryTest.cpp  TestBase.h
